--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-primary {
+    @apply bg-sky-900 text-white py-2 px-5 rounded-full hover:bg-sky-800;
+  }
+
+  .btn-secondary {
+    @apply flex items-center bg-slate-100 py-2 px-3 rounded-full text-slate-500 text-sm hover:bg-slate-200 active:bg-slate-300;
+  }
+
+  .btn-icon {
+    @apply w-11 h-11 p-2.5 rounded-full text-slate-500 hover:bg-slate-200 active:bg-slate-300;
+  }
+
+  .btn-xs {
+    @apply w-6 h-6 p-4 flex justify-center items-center rounded-full text-slate-600 hover:bg-slate-50/50 active:bg-slate-300;
+  }
+}
