--- a/src/input.css
+++ b/src/input.css
@@ -4,15 +4,15 @@
 
 @layer components {
   .btn-primary {
-    @apply bg-sky-900 text-white py-2 px-5 rounded-full hover:bg-sky-800;
+    @apply bg-sky-900 dark:bg-blue-300 text-white dark:text-slate-800 py-2 px-5 rounded-full hover:bg-sky-800 dark:hover:bg-sky-200;
   }
 
   .btn-secondary {
-    @apply flex items-center bg-slate-100 py-2 px-3 rounded-full text-slate-500 text-sm hover:bg-slate-200 active:bg-slate-300;
+    @apply flex items-center bg-blue-200 py-2 px-3 rounded-full text-slate-600 dark:text-slate-800 text-sm hover:bg-blue-300 dark:hover:bg-blue-100 active:bg-slate-300;
   }
 
   .btn-icon {
-    @apply w-11 h-11 p-2.5 rounded-full text-slate-500 hover:bg-slate-200 active:bg-slate-300;
+    @apply w-11 h-11 p-2.5 rounded-full text-slate-500 dark:text-slate-300 hover:bg-sky-300/25 dark:hover:bg-slate-400/25  active:bg-slate-300;
   }
 
   .btn-xs {
